{
    "name": "RampagePlayerInput",
    "maps": [
        {
            "name": "MovementRampage",
            "id": "cf599fb9-6923-48d3-a89c-5b564ba3911a",
            "actions": [
                {
                    "name": "GroundMove",
                    "type": "Value",
                    "id": "3bd95505-9d79-4d67-8491-7a5813a72485",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "b71ead2c-c3b8-4ab0-a69e-64d703ac2fa3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left/Right",
                    "id": "a147f459-c0d6-47c9-8d78-a15135e2ece3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "c456c4af-6172-486f-a2d8-e9f4d8479d97",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "cdf5f14b-01cb-43c9-81c8-f6413d3e6ef8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MoveUp",
                    "id": "a7cd8ae3-8ba4-4f98-b58d-545c92d2f282",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ed83eded-7c6c-4a23-9a5f-b25d2d407592",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "463a2503-f664-41ce-910b-f973b0feb209",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GroundMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0a6e5188-084b-417d-9f52-e55edf14776e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}